Fixed some misalignment and enhanced textbox

--- a/pre-level-1-css.css
+++ b/pre-level-1-css.css
@@ -1,96 +1,126 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-body{
-    height: 100%;
-    background-image: url("code.jpg");
-    display: flex;
-    align-items: center;
-    justify-content: center;
+body {
+  height: 100%;
+  background-image: url('code.jpg');
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-#card{
-    width: 70vw;
-    height: 80vh;
-    margin: 10vh auto;
-    background-color: #436850;
-    display: flex;
-    border-radius: 30px;
-    box-shadow: 0 0 40px 20px #39FF14;
+#card {
+  width: 70vw;
+  height: 80vh;
+  margin: 10vh auto;
+  background-color: #436850;
+  display: flex;
+  border-radius: 30px;
+  box-shadow: 0 0 20px 10px #39ff14;
+  transition: box-shadow 300ms ease-in-out;
 }
-#img{
-    width: 40%;
-    height: 80%;
-    margin: auto;
-    margin-left: 5vw;
-    display: inline-block;
+#card:hover {
+  box-shadow: 0 0 30px 15px #39ff14;
 }
-img{
-    width: 80%;
-    height: 95%;
-    border-radius: 10px;
-    display: block;
+#img {
+  position: relative;
+  width: 40%;
+  height: 80%;
+  margin: auto;
+  margin-left: 5vw;
+  display: inline-block;
 }
-#textBox{
-    width: 60%;
-    height: 80%;
-    margin: auto;
-    margin-right: 5vw;
-    background-color: black;
-    border-radius: 20px;
+img {
+  width: 80%;
+  height: 100%;
+  border-radius: 10px;
+  display: block;
 }
-#typedtext{
-    color: #39FF14;
-    margin: 5vh 5vw;
-    width: 80%;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
+#textBox {
+  position: relative;
+  width: 60%;
+  height: 80%;
+  margin: auto;
+  margin-right: 5vw;
+  background-color: black;
+  border-radius: 20px;
+}
+#typedtext {
+  color: #39ff14;
+  margin: 5vh 5vw;
+  width: 80%;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  font-size: 1.6rem;
 }
 #typedtext::after {
-    content: "";
-    width: 13px;
-    height: 2px;
-    margin-left: 5px;
-    background: #39FF14;
-    display: inline-flex;
-    align-items:baseline;
-    justify-content: baseline;
-    animation: cursor-blink 1s step-end infinite;
+  content: '';
+  width: 13px;
+  height: 2px;
+  margin-left: 5px;
+  background: #39ff14;
+  display: inline-flex;
+  align-items: baseline;
+  justify-content: baseline;
+  animation: cursor-blink 1s step-end infinite;
 }
 @keyframes cursor-blink {
-    from, to { background: transparent }
-    50% { background: #39FF14; }
+  from,
+  to {
+    background: transparent;
+  }
+  50% {
+    background: #39ff14;
+  }
 }
-#code, #name{
-    color: #39FF14;
-    margin: 2vh 5vw;
-    width: 80%;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
-    font-size: x-large;
-    text-shadow: 0 0 10px #000;
+#name {
+  position: absolute;
+  top: 90%;
+  left: 5%;
 }
-#code{
-    display: none;
+#code,
+#name {
+  color: #39ff14;
+  margin: 2vh 5vw;
+  width: 80%;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  font-size: x-large;
+  text-shadow: 0 0 10px #000;
 }
-button{
-    margin: 5vh 5vw;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    background: inherit;
-    color: #39FF14;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
-    font-size: large;
-    border: none;
+#code {
+  display: none;
 }
-button:hover{
-    transform: scale(1.3);
+button {
+  margin: 2vh 2vw;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background: inherit;
+  color: #39ff14;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  font-size: 1.5rem;
+  border: none;
 }
-#buttons{
-    display: none;
+button:hover {
+  transform: scale(1.3);
 }
-i{
-    padding: 5px;
+#buttons {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  display: none;
+  justify-content: space-between;
+}
+i {
+  padding: 5px;
+}
+
+.material-symbols-outlined {
+  transition: transform 450ms ease-in-out;
+}
+
+#replay:hover .material-symbols-outlined {
+  transform: rotate(-60deg);
 }
